; ModuleID = '/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_ensure_writable.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_ensure_writable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_FILE_ATTRIBUTES = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_READONLY = common dso_local global i32 0, align 4
@GIT_RETRY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ensure_writable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ensure_writable(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @GetFileAttributesW(i32* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* @INVALID_FILE_ATTRIBUTES, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %27

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @FILE_ATTRIBUTE_READONLY, align 4
  %13 = and i32 %11, %12
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %29

16:                                               ; preds = %10
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @FILE_ATTRIBUTE_READONLY, align 4
  %20 = xor i32 %19, -1
  %21 = and i32 %18, %20
  %22 = call i32 @SetFileAttributesW(i32* %17, i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %16
  br label %27

25:                                               ; preds = %16
  %26 = load i32, i32* @GIT_RETRY, align 4
  store i32 %26, i32* %2, align 4
  br label %29

27:                                               ; preds = %24, %9
  %28 = call i32 (...) @set_errno()
  store i32 -1, i32* %2, align 4
  br label %29

29:                                               ; preds = %27, %25, %15
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @GetFileAttributesW(i32*) #1

declare dso_local i32 @SetFileAttributesW(i32*, i32) #1

declare dso_local i32 @set_errno(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
